modules/security-group_module/jenkins_alb_security_module/main.tf
variable "vpc_id" {}

// Jenkins ALB Security group
resource "aws_security_group" "alb_jenkins_sg" {
  name        = "alb_jenkins_sg"
  description = "Allow http traffic"
  vpc_id      = var.vpc_id
  
  ingress {
    from_port   = "80"
    to_port     = "80"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = "443"
    to_port     = "443"
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = "0"
    to_port     = "0"
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name   = "alb_jenkins_sg"
  }
}
